avoiding automatic text wrapping

--- a/src/static/css/style.css
+++ b/src/static/css/style.css
@@ -1112,3 +1112,7 @@ button:active {
 #btn-fer {
   width: auto;
 }
+.botao-footer {
+  white-space: nowrap;
+}
+
